--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,6 +194,14 @@ body {
     padding-right: 20px;
 }
 
+/*face css*/
+.s-quote-avatar img {
+    border: 1px solid #DDDDDD;
+    display: block;
+    height: 48px;
+    padding: 1px;
+    width: 48px;
+}
 
 
 
