--- a/views/reg.jade
+++ b/views/reg.jade
@@ -6,21 +6,25 @@ block content
   body
 
     div.container
-      form(action='/user',method='post', class='form-horizontal')
+      form(action='/reg',method='post', class='form-horizontal')
         fieldset
             legend 注册
             div.control-group
-              label(class='control-label', for='username') username
+              label(class='control-label', for='username') 用户名：
               div.controls
                 input(name='username',type='text')
             div.control-group
-              label(class='control-label',for='password') password
+              label(class='control-label',for='password') 密码：
               div.controls
                 input(name='password',type='password')
             div.control-group
-              label(class='control-label',for='password-repeat') password-repeat
+              label(class='control-label',for='password-repeat') 密码确认：
               div.controls
                   input(name='password-repeat',type='password')
+            div.control-group
+              label(class='control-label',for='email') email：
+              div.controls
+                  input(name='email',type='text')
             div.control-group
               div.controls
                 button(class='btn', type='submit') 提交
