--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,7 +133,8 @@ body {
     word-wrap: break-word; word-break: normal;
 }
 .blog-cnm{
-    background-color: #F5F5F5;
+    /**background-color: #F5F5F5;**/
+    border-radius: 6px 6px 6px 6px;
     border: 1px solid #CCCCCC;
 
     margin: 5px 0;
@@ -155,7 +156,7 @@ body {
 
 .title{
     border-bottom: 1px solid #FAFAFA;
-    color: #334455;
+    /**color: #334455;**/
     font-size: 16px;
     margin: 0;
     padding: 2px 10px;
@@ -163,7 +164,7 @@ body {
 }
 
 .author{
-    margin-left: 20px;
+    margin-left: 40px;
     margin-top: 20px;
     padding-top: 15px;
     color: #999999;
