--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -18,7 +18,7 @@ block append head
                     failUploadText: '上传失败',
                     multiple:false,
                     sizeLimit:4028000,
-                    allowedExtensions:['jpg','gif'],
+                    allowedExtensions:['jpg','gif','png'],
                     onComplete: function(id, fileName, response){
                         //alert('id: '+id+ '   fileName: '+fileName);
                         if (!response.success){
