--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,16 @@ body {
 }
 
 
+.well-no-back {
+
+    border: 1px solid #E3E3E3;
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 20px;
+    min-height: 20px;
+    padding: 19px;
+}
+
 .display-show{
     display:block;
 }
@@ -137,9 +147,9 @@ body {
     border-radius: 6px 6px 6px 6px;
     border: 1px solid #CCCCCC;
 
-    margin: 5px 0;
+
     overflow: auto;
-    padding: 5px;
+
 
 }
 .blog-content{
@@ -217,13 +227,13 @@ body {
 /* Popovers */
 .bs-docs-example-popover {
     padding-bottom: 24px;
-    background-color: #f9f9f9;
+
 }
 .bs-docs-example-popover .popover {
     position: relative;
     display: block;
     float: left;
-    width: 512px;
+    width: 560px;
     margin: 20px;
 }
 
