change faceUrl successfully

--- a/views/user-blogs.jade
+++ b/views/user-blogs.jade
@@ -10,7 +10,7 @@ block content
             if i % 3 == 0
               div.row-fluid
                 div.span3
-                  p(class='auto-line') #{post.pustime} #{post.username} say: #{post.content}
+                  p(class='auto-line') #{post.pusTime} #{post.username} say: #{post.content}
             else
                 div.span3
-                  p(class='auto-line') #{post.pustime} #{post.username} say: #{post.content}
+                  p(class='auto-line') #{post.pusTime} #{post.username} say: #{post.content}
