--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -38,6 +38,10 @@ block content
                      label(class='control-label', for='username') 用户名
                      div.controls
                        label(class='control-label') #{user.name}
+                   div.control-group
+                        label(class='control-label', for='regTime') 注册时间
+                        div.controls
+                          label(class='control-label') #{user.regTime}
 
                    div.control-group
 
