finished face convert function

--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -46,7 +46,7 @@ block content
                    div.control-group
 
                      label(class='control-label', for='face') 头像
-                     input(id='image-face-hidden',type='hidden',name='faceUrl', value='#{user.faceUrl}')
+                     input(id='face-id',type='hidden',name='faceId', value='#{user.faceId}')
                      div.controls
                         div.span2.face-container
                           img(class='img-polaroid img-rounded',id='image-face',src='#{user.faceUrl}',alt='头像')
