--- a/views/login.jade
+++ b/views/login.jade
@@ -9,7 +9,7 @@ block content
     div.container
       form(action='/login',method='post', class='form-horizontal well form-inline center')
         fieldset
-            legend 注册
+            legend 登录
             div.control-group
               label(class='control-label', for='username') 用户名：
               div.controls
@@ -21,6 +21,6 @@ block content
 
             div.control-group
               div.controls
-                button(class='btn', type='submit') 登录
+                button(class='btn btn-success', type='submit') 登录
 
 
