--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,19 +14,19 @@ html(lang='en')
     link(href='/ico/apple-touch-icon-114-precomposed.png', sizes='114x114', rel='apple-touch-icon-precomposed')
     link(href='/ico/apple-touch-icon-72-precomposed.png', sizes='72x72', rel='apple-touch-icon-precomposed')
     link(href='/ico/apple-touch-icon-57-precomposed.png', rel='apple-touch-icon-precomposed')
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
-    <![endif]-->
-    script(src='/javascripts/jquery/jquery-1.8.0.min.js')
+
+
 
 
     include includes/head
     include includes/message
 
     div.container.min-height
-     block content
+        block content
     include includes/footer
+
+
+    script(src='/javascripts/jquery/jquery-1.8.0.min.js')
     script(src='/javascripts/bootstrap-transition.js')
     script(src='/javascripts/bootstrap-alert.js')
     script(src='/javascripts/bootstrap-modal.js')
@@ -39,6 +39,25 @@ html(lang='en')
     script(src='/javascripts/bootstrap-collapse.js')
     script(src='/javascripts/bootstrap-carousel.js')
     script(src='/javascripts/bootstrap-typeahead.js')
-
     script(src='/javascripts/utils.js')
 
+    script(src='/javascripts/noty/jquery.noty.js')
+    script(src='/javascripts/noty/layouts/bottom.js')
+    script(src='/javascripts/noty/layouts/bottomCenter.js')
+    script(src='/javascripts/noty/layouts/bottomLeft.js')
+    script(src='/javascripts/noty/layouts/bottomRight.js')
+    script(src='/javascripts/noty/layouts/center.js')
+    script(src='/javascripts/noty/layouts/centerLeft.js')
+    script(src='/javascripts/noty/layouts/centerRight.js')
+    script(src='/javascripts/noty/layouts/inline.js')
+    script(src='/javascripts/noty/layouts/top.js')
+    script(src='/javascripts/noty/layouts/topCenter.js')
+    script(src='/javascripts/noty/layouts/layouts/topLeft.js')
+    script(src='/javascripts/noty/layouts/layouts/topRight.js')
+    script(src='/javascripts/noty/themes/default.js')
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    script(src='/javascripts/google-code-prettify/html5.js')
+    <![endif]-->
+    script(src='/javascripts/google-code-prettify/prettify.js')
