--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,8 +154,7 @@ body {
 }
 .blog-content{
 
-    width: 100px;
-    height: 50px;
+
 
     overflow: hidden;
     text-overflow: ellipsis;
@@ -266,10 +265,18 @@ body {
 }
 
 
+.face-border{
+    border: 1px solid #DDDDDD;
+}
 
 
+.marketing-byline{
+    color: #999999;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 25px;
 
-
+}
 
 
 
