refactor homepage add menu highlight

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -279,6 +279,17 @@ body {
 }
 
 
+.navbar-form .input-prepend button {
+    margin-top: 0;
+}
+
+
+.margin-top0{
+    margin-top: 0;
+}
+#search-ico{
+    margin-top: 0;
+}
 
 
 
