--- a/views/home/post-content.jade
+++ b/views/home/post-content.jade
@@ -20,8 +20,8 @@ each post, i in posts
                | #{post.content}
 
   div.row-fluid
-      div.span12
-         p
+      div.span12.btn-group
+
            a(class='btn')
                i(class='icon-thumbs-up')
                | 顶(7690)
