--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ block content
                       div(class='tab-pane',id='tab2')
                           p Howdy, I'm in Section 2.
           
-          div(class='span4')
+          div(class='span4 well-no-back')
               h3.title 相关信息
           
 
