--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
-extends layout
+extends logo-layout
 
 block append head
 
@@ -6,21 +6,38 @@ block content
   body
 
 
-    div.container
-      form(action='/login',method='post', class='form-horizontal well form-inline center')
-        fieldset
-            legend 登录
-            div.control-group
-              label(class='control-label', for='username') 用户名：
-              div.controls
-                input(name='username',type='text')
-            div.control-group
-              label(class='control-label',for='password') 密码：
-              div.controls
-                input(name='password',type='password')
+    div.container-fluid
+        div.content
+              div.dialog.dialog-well-no-back
 
-            div.control-group
-              div.controls
-                button(class='btn btn-success', type='submit') 登录
+                  form(action='/login',method='post', class='form-vertical form-inline center')
+                    fieldset
+
+                        div.control-group
+                          label(class='control-label', for='username') 用户名：
+                          div.controls
+                            input(name='username',type='text',class='input-xlarge325')
+                        div.control-group
+                          label(class='control-label',for='password') 密码：
+                          div.controls
+                            input(name='password',type='password',class='input-xlarge325')
+
+                        div.control-group
+
+
+                            a(class='padding-top4', href='/forget') 忘记密码
+
+                                 a(class='btn btn-success',href='/login') 登录
+
+
+              div.message.dialog-well-no-back
+                  fieldset
+                      div.control-group
+                           div.controls
+                                a(href='/reg')
+                                  | 开始你的翱翔之旅
+                                  span.pull-right 注册
+
+
 
 
