--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -318,13 +318,38 @@ body {
     margin-bottom: 20px;
     min-height: 20px;
     padding: 30px;
+
+
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #2C263F), color-stop(100%, rgba(44, 38, 63, 0.4)));
+    background-image: -moz-linear-gradient(top, #2C263F 0%, rgba(44, 38, 63, 0.4) 100%);
+    background-image: linear-gradient(top, #2C263F 0%, rgba(44, 38, 63, 0.4) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#333333, endColorstr=#999999);/*IE<9>*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#333333, endColorstr=#999999)";/*2C263FIE8+*/
+    border: 1px solid #373553;
+    color: #BFB8E5;
+
+
+
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+}
+
+
+.dialog a, .message a{
+    color: #FFFFFF;
 }
 
 .content {
-    margin-top: 170px;
-    test-align:center;
+    margin-top: 140px;
+    text-align:center;
     width: 100%;
     z-index: 5;
+
+    background-image: "/images/bundary.jpg";
 }
 
 
