--- a/views/logo-layout.jade
+++ b/views/logo-layout.jade
@@ -27,19 +27,23 @@ html(lang='en')
 
 
     script(src='/javascripts/jquery/jquery-1.8.0.min.js')
-    script(src='/javascripts/bootstrap-transition.js')
-    script(src='/javascripts/bootstrap-alert.js')
-    script(src='/javascripts/bootstrap-modal.js')
-    script(src='/javascripts/bootstrap-dropdown.js')
-    script(src='/javascripts/bootstrap-scrollspy.js')
-    script(src='/javascripts/bootstrap-tab.js')
-    script(src='/javascripts/bootstrap-tooltip.js')
-    script(src='/javascripts/bootstrap-popover.js')
-    script(src='/javascripts/bootstrap-button.js')
-    script(src='/javascripts/bootstrap-collapse.js')
-    script(src='/javascripts/bootstrap-carousel.js')
-    script(src='/javascripts/bootstrap-typeahead.js')
-    script(src='/javascripts/utils.js')
+    script(src='/javascripts/bootstrap/bootstrap-transition.js')
+    script(src='/javascripts/bootstrap/bootstrap-alert.js')
+    script(src='/javascripts/bootstrap/bootstrap-modal.js')
+    script(src='/javascripts/bootstrap/bootstrap-dropdown.js')
+    script(src='/javascripts/bootstrap/bootstrap-scrollspy.js')
+    script(src='/javascripts/bootstrap/bootstrap-tab.js')
+    script(src='/javascripts/bootstrap/bootstrap-tooltip.js')
+    script(src='/javascripts/bootstrap/bootstrap-popover.js')
+    script(src='/javascripts/bootstrap/bootstrap-button.js')
+    script(src='/javascripts/bootstrap/bootstrap-collapse.js')
+    script(src='/javascripts/bootstrap/bootstrap-carousel.js')
+    script(src='/javascripts/bootstrap/bootstrap-typeahead.js')
+    script(src='/javascripts/bootstrap/utils.js')
+
+
+    script(src='/javascripts/backbone/underscore.js')
+    script(src='/javascripts/backbone/backbone.js')
 
     script(src='/javascripts/noty/jquery.noty.js')
     script(src='/javascripts/noty/layouts/bottom.js')
@@ -52,8 +56,8 @@ html(lang='en')
     script(src='/javascripts/noty/layouts/inline.js')
     script(src='/javascripts/noty/layouts/top.js')
     script(src='/javascripts/noty/layouts/topCenter.js')
-    script(src='/javascripts/noty/layouts/layouts/topLeft.js')
-    script(src='/javascripts/noty/layouts/layouts/topRight.js')
+    script(src='/javascripts/noty/layouts/topLeft.js')
+    script(src='/javascripts/noty/layouts/topRight.js')
     script(src='/javascripts/noty/themes/default.js')
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -61,3 +65,5 @@ html(lang='en')
     script(src='/javascripts/google-code-prettify/html5.js')
     <![endif]-->
     script(src='/javascripts/google-code-prettify/prettify.js')
+
+    script(src='/javascripts/app/user.js')
