--- a/views/includes/tip.jade
+++ b/views/includes/tip.jade
@@ -1,12 +1,7 @@
-
-div(id='tip-container',class='container')
-    div(id='tip')
+div(id='tip',class='message')
 
 <!-- Templates -->
 script(type="text/template",id="item-template")
-    div(class="view")
-        label <%- title %>
-        span
-           | sdfamd.mf.admfadf.ad.fmad
-           | sdfdfsdfsadfa
+    h4 <%- title %>
+    | <%- content %>
 
