--- a/views/login.jade
+++ b/views/login.jade
@@ -5,42 +5,38 @@ block append head
 
 block content
   body
+      div(id='login-div',class='container-fluid')
+            div.content
+                  include includes/tip
+                  div.dialog.dialog-well-no-back
 
+                      form(id='login-form',action='/login',method='post', class='form-vertical form-inline center')
+                          fieldset
 
-    div(id='login-div',class='container-fluid')
+                            div.control-group
+                              label(class='control-label', for='username') 用户名：
+                              div.controls
+                                input(id='username-input',name='username',type='text',class='input-xlarge325')
+                            div.control-group
+                              label(class='control-label',for='password') 密码：
+                              div.controls
+                                input(id='password-input',name='password',type='password',class='input-xlarge325')
 
-        include includes/tip
-        div.content
-
-              div.dialog.dialog-well-no-back
-
-                  form(id='login-form',action='/login',method='post', class='form-vertical form-inline center')
-                    fieldset
-
-                        div.control-group
-                          label(class='control-label', for='username') 用户名：
-                          div.controls
-                            input(id='username-input',name='username',type='text',class='input-xlarge325')
-                        div.control-group
-                          label(class='control-label',for='password') 密码：
-                          div.controls
-                            input(name='password-input',type='password',class='input-xlarge325')
-
-                        div.control-group
-                            a(id='login-btn',class='btn btn-success',href='#login') 登录
-                            div.pull-right
-                                a(class='padding-top4', href='/forget') 忘记密码
+                            div.control-group
+                                a(id='login-btn',class='btn btn-success',href='#login') 登录
+                                div.pull-right
+                                    a(class='padding-top4', href='/forget') 忘记密码
 
 
 
 
-              div.message.dialog-well-no-back
-                  fieldset
-                      div.control-group
-                           div.controls
-                                a(href='/reg')
-                                  | 开始你的翱翔之旅
-                                  span.pull-right 注册
+                  div.message.dialog-well-no-back
+                      fieldset
+                          div.control-group
+                               div.controls
+                                    a(href='/reg')
+                                      | 开始你的翱翔之旅
+                                      span.pull-right 注册
 
 
 
