--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -317,7 +317,7 @@ body {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
     margin-bottom: 20px;
     min-height: 20px;
-    padding: 30px;
+    padding: 20px;
 
 
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #2C263F), color-stop(100%, rgba(44, 38, 63, 0.4)));
@@ -338,6 +338,17 @@ body {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
 
+.tip-error{
+    width: 343px;
+    margin: 0 auto;
+    text-align: left;
+    border: 1px solid #E3E3E3;
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 10px;
+    min-height: 20px;
+    padding: 20px;
+}
 
 .dialog a, .message a{
     color: #FFFFFF;
