--- a/views/blog-one.jade
+++ b/views/blog-one.jade
@@ -3,22 +3,26 @@ extends layout
 block append head
 
 block content
-  body
-    div.row-fluid
-      div.span12
+    body
+        div.row-fluid
+            div.span12
+                div(class='jiathis_style')
+                    span(class='jiathis_txt') 分享到：
+                    a(class='jiathis_button_tsina') 新浪微博
+                    a(class='jiathis_button_qzone')  QQ空间
+                    a(class='jiathis_button_tqq')  腾讯微博
+                    a(class='jiathis_button_renren')  人人网
+                    a(class='jiathis_button_kaixin001')  开心网
+                    a(href='http://www.jiathis.com/share',class='jiathis jiathis_txt jiathis_separator jtico jtico_jiathis',target='_blank') 更多
+                    a(class='jiathis_counter_style')
+                    script(type='text/javascript',src='http://v2.jiathis.com/code/jia.js',charset='utf-8')
 
-          div(class='jiathis_style')
+        div.row-fluid
+            div.span12
+                h3 #{post.title}
+                p #{post.content}
 
 
-            span(class='jiathis_txt') 分享到：
-            a(class='jiathis_button_tsina') 新浪微博
-            a(class='jiathis_button_qzone')  QQ空间
-            a(class='jiathis_button_tqq')  腾讯微博
-            a(class='jiathis_button_renren')  人人网
-            a(class='jiathis_button_kaixin001')  开心网
-            a(href='http://www.jiathis.com/share',class='jiathis jiathis_txt jiathis_separator jtico jtico_jiathis',target='_blank') 更多
-            a(class='jiathis_counter_style')
-            script(type='text/javascript',src='http://v2.jiathis.com/code/jia.js',charset='utf-8')
-           
+
              
       
