doing user-blogs

--- a/views/home/post-content.jade
+++ b/views/home/post-content.jade
@@ -1,7 +1,7 @@
 
 
 
-if typeof(posts) !== 'undefined' && posts !== null && posts.length > 0
+if typeof(posts) !== 'undefined' && posts !== null
 each post, i in posts
   div.row-fluid
     div.span8
