--- a/views/user-blogs.jade
+++ b/views/user-blogs.jade
@@ -5,14 +5,21 @@ block append head
 block content
     body
         div.row-fluid
-            div.span3.well-no-back
-                p
-                   img(src='#{user.faceUrl}')
-            div.span9
-                if typeof(posts) != 'undefined' && posts.length > 0
+            div.span3.well-no-back.align-center
+                div
+                    p
+                       img(src='#{user.faceUrl}')
+                    p  #{user.name}
+                    p  #{user.regTimeStr}
+                    p  #{user.flyAge}
+                    p  #{user.email}
+                div
+
+
+            div.span9.well-no-back
+                if typeof(posts) !== 'undefined' && posts.length > 0
                     each post, i in posts
-
                         p(class='auto-line') #{post.fromNow} #{post.username} say: #{post.content}
+                        hr.soft
 
 
-                        p(class='auto-line') #{post.fromNow} #{post.username} say: #{post.content}
