--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
     padding-bottom: 40px;
 }
 .min-height{
-    min-height: 700px;
+    min-height: 600px;
 }
 
 
@@ -366,6 +366,13 @@ body {
 
 
 
+.align-center{
+    margin: 0 auto;
+    text-align: center;
+}
 
+.one-post{
+    min-height: 400px;
+}
 
 
