--- a/views/home/post-content.jade
+++ b/views/home/post-content.jade
@@ -9,10 +9,10 @@ each post, i in posts
          a(href='/user/#{post.creator._id}')
            img(class='face-border img-rounded', src='#{post.creator.faceUrl}',alt='user')
          | &nbsp;&nbsp;&nbsp;
-         a(href='/blog/#{post._id}') #{post.title}
+         a(href='/post/#{post._id}') #{post.title}
     div.span4
         div.pull-right
-          span(class='badge badge-success')•10035 评论
+          span(class='badge badge-success') 评论#{post.comments.length}
 
 
   div.row-fluid
@@ -21,7 +21,7 @@ each post, i in posts
                | #{post.content}
 
   div.row-fluid
-      div.span12.btn-group
+      div.span12
 
            a(class='btn')
                i(class='icon-thumbs-up')
@@ -32,7 +32,7 @@ each post, i in posts
   div.row-fluid
            div.pull-left
                p.marketing-byline
-                   | 206 次浏览
+                   | • 206 次浏览
                    a(href='/post/reply') 回复
 
            div.pull-right
