--- a/views/index.jade
+++ b/views/index.jade
@@ -30,4 +30,8 @@ block content
               h3.title 相关信息
 
 
+              div(id='divPop',class='popover up-post')
+                  p
+                    | 顶
+                    | +1
 
